Fix .price-box width on mobile

--- a/styles.css
+++ b/styles.css
@@ -863,10 +863,10 @@ footer ul {
         h2, h3 {
             text-align: center;
         }
+
+        div.price-box {
+            width: 100%;
+        }
     }
 
-    .price-box {
-        width: 100%;
-        text-align: center;
-    }
 }
